--- a/package.json
+++ b/package.json
@@ -86,6 +86,8 @@
     "@angular/router": "~4.3.1",
     "@angularclass/hmr": "~2.1.3",
     "@angularclass/hmr-loader": "^3.0.4",
+    "angular-in-memory-web-api": "^0.4.6",
+    "angular2-in-memory-web-api": "0.0.21",
     "core-js": "^2.4.1",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
